added 3 new fields to edit product form

--- a/localization/en.json
+++ b/localization/en.json
@@ -304,6 +304,9 @@
   "global.packagingExceptions": "Packaging Exceptions",
   "global.packagingNonBulk": "Packaging Non Bulk",
   "global.packagingBulk": "Packaging Bulk",
+  "global.packagingLength": "Packaging Length",
+  "global.packagingHeight": "Packaging Height",
+  "global.packagingWidth": "Packaging Width",
   "global.quantityLimitationsPassengerAircraftRail": "Quantity Limitations Passenger Aircraft/Rail",
   "global.quantityLimitationsCargoAircraftOnly": "Quantity Limitations Cargo Aircraft Only",
   "global.vesselStowageLocation": "Vessel Stowage Location",
