--- a/localization/en.json
+++ b/localization/en.json
@@ -906,6 +906,13 @@
   "nav.dropdown.ShoppingCart": "Shopping Cart",
   "myInventory.myInventory": "MY INVENTORY",
   "myInventory.smallHeader": "{number} products offerings selected",
+  "myInventory.export": "Export",
+  "myInventory.exportInventory": "Export Inventory",
+  "myInventory.exportInfoText": "Please choose, per branch, how many exports you would like",
+  "myInventory.exportInventorySearchText": "Search by Company",
+  "myInventory.exportInventoryCompanySelect": "Company Select",
+  "myInventory.exportInventoryByCompany": "By Company",
+  "myInventory.exportInventorySelect": "Select",
   "myInventory.import": "Import",
   "myInventory.productName": "Product Name",
   "myInventory.TradeName": "Trade Name",
