--- a/localization/en.json
+++ b/localization/en.json
@@ -723,6 +723,8 @@
   "global.selectCompany": "Select Company",
   "global.selectHomeBranch": "Select Home Branch",
   "global.selectAdditionalHomeBranch": "Select Additional Home Branch",
+  "global.selectSellMarketSegments": "Select Sell Market Segments",
+  "global.selectBuyMarketSegments": "Select Buy Market Segments",
   "global.tags": "Tags",
   "global.buy": "Buy",
   "global.price": "Price",
@@ -1808,7 +1810,7 @@
   "settings.contactPhone": "Contact Phone",
   "settings.streetName": "Street Name",
   "settings.registerDwollaAcc": "Register Dwolla Account",
-  "settings.dwollaAccBalance": "Dwolla Balance:",
+  "settings.dwollaAccBalance": "Dwolla Balance : ",
   "settings.addressNum": "Address {num}",
   "settings.ssn": "SSN",
   "settings.passportCountry": "Passport Country",
@@ -1858,7 +1860,7 @@
   "settings.tables.warehouses.buttonAdd": "Add Warehouse",
   "settings.tables.warehouses.search": "Search warehouse by name, address or contact ...",
   "settings.tables.products.buttonAdd": "Add Product",
-  "settings.tables.products.buttonImport": "Import Products",
+  "settings.tables.products.buttonImport": "Import",
   "settings.tables.products.search": "Search product catalog by name, number ...",
   "settings.tables.products.unmappedOnly": "Unmapped only",
   "settings.tables.globalBroadcast.buttonAdd": "Add Global Price Book",
