#34166 Reworked Settings / Delivery Addresses and Settings / Client Companies modals.

--- a/localization/en.json
+++ b/localization/en.json
@@ -707,6 +707,12 @@
   "global.packageWeight": "Package Weight",
   "global.packageWeightUnit": "Package Weight Unit",
   "global.packagesPerPallet": "Packages per Pallet",
+  "global.palletMinPkgs": "Pallet Min Pkgs",
+  "global.palletMaxPkgs": "Pallet Max Pkgs",
+  "global.palletWeight": "Pallet Weight",
+  "global.palletLength": "Pallet Length",
+  "global.palletWidth": "Pallet Width",
+  "global.palletHeight": "Pallet Height",
   "global.showMore": "Show More",
   "global.showLess": "Show Less",
   "global.selectDate": "Select Date",
