#34186 Updated Admin menu, texts and Company-product-info component.

--- a/localization/en.json
+++ b/localization/en.json
@@ -69,7 +69,7 @@
   "admin.documentType": "Document Type",
   "admin.associations": "Associations",
   "admin.MarketSegment": "Document Segment",
-  "admin.searchCasProduct": "Search cas product by name or number ...",
+  "admin.searchCasProduct": "Search CAS product by name or number ...",
   "admin.searchCompany": "Search company by name",
   "admin.searchUnitOfMeasure": "Search unit of measure by name or measure type",
   "admin.searchUnitOfPackaging": "Search packaging types by name or measure type",
@@ -2351,7 +2351,7 @@
   "companies.title": "Companies",
   "products.productCatalog.search": "Search by Product Name or Code",
   "products.productCatalog.buttonAdd": "Add Echo Product",
-  "products.casProducts.search": "Search cas product by name or number ...",
+  "products.casProducts.search": "Search CAS product by name or number ...",
   "products.casProducts.buttonAdd": "Add CAS Product",
   "documentTypes.title": "Document Types",
   "marketSegments.title": "Market Segments",
