#34088 Updated Settings / Locations - Delivery Locations (Delivery addresses), Pick-Up Locations (Warehouses), Branches

--- a/localization/en.json
+++ b/localization/en.json
@@ -155,6 +155,7 @@
   "navigation.products": "Products",
   "navigation.documentTypes": "Document Types",
   "navigation.marketSegments": "Market Segments",
+  "navigation.locations": "Locations",
   "dwolla.controllerTitlePopup": "Please read below for the definition of Controller in this context.",
   "dwolla.paymentPoweredBy": "Echo Global Chemical Exchange payment gateway is powered by:",
   "dwolla.confirmAcc": "Confirm Account Administrator Information",
@@ -725,6 +726,7 @@
   "global.enterName": "Enter Name",
   "global.enterJobTitle": "Enter Job Title",
   "global.enterEmailAddress": "Enter Email Address",
+  "global.enterAddressName": "Enter Address Name",
   "global.phonePlaceholder": "000 000 0000",
   "global.selectCompany": "Select Company",
   "global.selectHomeBranch": "Select Home Branch",
@@ -1798,6 +1800,8 @@
   "settings.EditWarehouse": "Edit Warehouse",
   "settings.AddWarehouse": "Add Warehouse",
   "settings.warehouseName": "Warehouse Name",
+  "settings.pickUpLocationName": "Pick-Up Location Name",
+  "settings.pickupLocation": "Pick-Up Location",
   "settings.branchName": "Branch Name",
   "settings.accountNumber": "Account Number",
   "settings.accountType": "Account Type",
@@ -1870,8 +1874,8 @@
   "settings.tables.clientCompanies.search": "Search Client Companies",
   "settings.tables.branches.buttonAdd": "Add Branch",
   "settings.tables.branches.search": "Search branch by name, address or contact ...",
-  "settings.tables.warehouses.buttonAdd": "Add Warehouse",
-  "settings.tables.warehouses.search": "Search warehouse by name, address or contact ...",
+  "settings.tables.warehouses.buttonAdd": "Add Pick-Up Location",
+  "settings.tables.warehouses.search": "Search Pick-Up Location…",
   "settings.tables.products.buttonAdd": "Add Product",
   "settings.tables.products.buttonImport": "Import",
   "settings.tables.products.search": "Search product catalog by name, number ...",
@@ -1889,17 +1893,20 @@
   "settings.bankAccounts.uploadDoc.license": "License",
   "settings.bankAccounts.uploadDoc.idcard": "ID Card",
   "settings.bankAccounts.uploadDoc.other": "Other",
-  "settings.tables.deliveryAddresses.buttonAdd": "Add Address",
-  "settings.tables.deliveryAddresses.search": "Search delivery address ...",
+  "settings.tables.deliveryAddresses.buttonAdd": "Add Delivery Location",
+  "settings.tables.deliveryAddresses.search": "Search Delivery Location…",
   "settings.tables.logistics.buttonAdd": "Add Logistics",
   "settings.tables.logistics.search": "Search logistics ...",
   "settings.tables.documents.buttonAdd": "Add Document",
   "settings.branches.enterBranch": "Enter Branch Name",
-  "settings.warehouses.enterWarehouseName": "Enter Warehouse Name",
+  "settings.warehouses.enterWarehouseName": "Enter Pick-Up Location Name",
   "settings.warehouses.enterContactName": "Enter Contact Name",
   "settings.warehouses.enterEmailAddress": "Enter Email Address",
   "settings.warehouses.enterTaxId": "Enter Tax ID",
-  "settings.warehouses.writeDeliveryNotesHere": "Write Delivery Notes Here",
+  "settings.warehouses.writeDeliveryNotesHere": "Write Delivery Notes Here...",
+  "settings.locations.menu.deliveryLocations": "Delivery Locations",
+  "settings.locations.menu.pickUpLocations": "Pick-Up Locations",
+  "settings.locations.menu.branches": "Branches",
   "related.documents.addDocument": "Add Document",
   "order.related.documents.add": "ADD DOCUMENTS",
   "related.documents.documentType": "Document Type",
@@ -2208,6 +2215,7 @@
   "title.settings.system-settings": "Company Settings",
   "title.settings.users": "Users",
   "title.settings.warehouses": "Warehouses",
+  "title.settings.locations": "Locations",
   "holds.intProductName": "Product Name",
   "holds.pkgsHeld": "Quantity",
   "holds.expirationTime": "Expires",
@@ -2225,9 +2233,9 @@
   "tutorial.users.title": "Add Users",
   "tutorial.users.content": "Invite other team members to buy and sell with you!",
   "tutorial.users.button": "Add User",
-  "tutorial.warehouses.title": "Add Warehouses",
-  "tutorial.warehouses.content": "Add a Warehouse and be one step closer to posting on the Marketplace.",
-  "tutorial.warehouses.button": "Add Warehouse",
+  "tutorial.warehouses.title": "Add Pick-Up Locations",
+  "tutorial.warehouses.content": "Add a Pick-Up Location and be one step closer to posting on the Marketplace.",
+  "tutorial.warehouses.button": "Add Pick-Up Location",
   "tutorial.products.title": "Add Products",
   "tutorial.products.content": "You can import with this .csv template or add them individually.",
   "tutorial.products.button": "Add Products",
