Task #34255 - Renamed External Product to Generic Product

--- a/localization/en.json
+++ b/localization/en.json
@@ -321,7 +321,7 @@
   "global.beneficialOwners": "Beneficial Owners",
   "global.startTypingToSearch": "Start typing to begin search",
   "global.addListing": "Add Listing",
-  "global.externalProductCode": "External Product Code",
+  "global.genericProductCode": "Generic Product Code",
   "global.editListing": "Edit Listing",
   "global.documentManager": "Document Manager",
   "global.companyProduct": "Company Product",
@@ -331,7 +331,7 @@
   "global.accessDenied": "Access Denied!",
   "global.logistics": "Logistics",
   "global.packagingUnit": "Packaging Unit",
-  "global.externalProductName": "External Product Name",
+  "global.genericProductName": "Generic Product Name",
   "global.packagesAvailable": "Packages Available",
   "global.packages": "Packages",
   "global.casIndexNumber": "CAS Index Number",
@@ -1773,7 +1773,7 @@
   "settings.addUser": "Add User",
   "settings.product.offerExists": "Product cannot be edited, as it already has ProductOffers linked to it.",
   "settings.product.unmapped": "This product is not mapped and will not show on the Marketplace.",
-  "settings.associatedCompanyGenericProduct": "What is the Associated External Product that you would like to map to?",
+  "settings.associatedCompanyGenericProduct": "What is the Associated Generic Product that you would like to map to?",
   "settings.system.allDisabled": "There is nothing to save as none of the values can be changed.",
   "settings.onlyLastFourNumbers": "Enter only last four digits",
   "settings.user.enabled": "User enabled",
