new page errors

--- a/localization/en.json
+++ b/localization/en.json
@@ -52,7 +52,12 @@
   "error.backButtonText": "Back to Echo Exchange",
   "error.footer": "If this issue persists please contact: {email}",
   "error.title": "Error!",
-  "error.gatewayTimeout": "GATEWAY TIMEOUT",
+  "error.gatewayTimeout.content": "The system is currently undergoing maintenance. Please, check back soon.",
+  "error.gatewayTimeout.title": "ERROR 504 GATEWAY TIMEOUT",
+  "error.forbidden.content": "You don't have permission to access this page on this server.",
+  "error.forbidden.title": "ERROR 403 FORBIDDEN",
+  "error.notFound.content": "The page you were looking doesn't exist. We think the page may have moved.",
+  "error.notFound.title": "ERROR 404 NOT FOUND",
   "error.bringToInventory": "Bring me to My Inventory",
   "success.title": "Success!",
   "admin.duplicateName": "Duplicate name!",
