#34085 Remove nacdMember Attribute. Fixed Company Enable checkbox.

--- a/localization/en.json
+++ b/localization/en.json
@@ -117,8 +117,6 @@
   "broadcast.broadcastingTooltip": "Shows number of company branches out of the total company branches you will Broadcast to, once you turn Broadcasting on.",
   "broadcast.companyInfo": "COMPANY INFO",
   "boradcast.modal.companyName": "Company Name",
-  "boradcast.modal.nacdMember": "NACD Member",
-  "boradcast.modal.nacdReferences": "NACD Referenced",
   "boradcast.modal.participateSince": "Participate Since",
   "errors.fileTooLarge.header": "Too large file",
   "errors.fileTooLarge.content": "File '{name}' is larger than maximal allowed size: {size} MB",
@@ -781,7 +779,6 @@
   "import.splitPkg": "Split PKGs",
   "import.validityDate": "Offer Expiration Date",
   "import.warehouseName": "Warehouse",
-  "import.companies.isNacdMember": "Is NACD Member",
   "import.companies.name": "Company Name",
   "import.companies.primaryBranchDeliveryAddressAddressCity": "Primary Branch City",
   "import.companies.primaryBranchDeliveryAddressAddressCountry": "Primary Branch Country",
@@ -2201,7 +2198,6 @@
   "order.requestCreditSend": "Request credit was successfully sent",
   "order.relatedDocuments": "RELATED DOCUMENTS",
   "order.relatedDocumentsFor": "RELATED DOCUMENTS FOR ",
-  "global.nacdMember": "NACD Member",
   "settings.wrongUrl": "Wrong URL",
   "settings.rerenderToInventory": "You are not authorized to view this page. You will be automatically redirected to Inventory.",
   "settings.rerenderToUsers": "You are not authorized to view this page. You will be automatically redirected to Users.",
@@ -2386,7 +2382,7 @@
   "companies.title": "Companies",
   "products.productCatalog.search": "Search by Product Name or Code",
   "products.productCatalog.buttonAdd": "Add Company Generic Product",
-  "products.casProducts.search": "Search cas product by name or number ...",
+  "products.casProducts.search": "Search CAS product by name or number ...",
   "products.casProducts.buttonAdd": "Add CAS Product",
   "documentTypes.title": "Document Types",
   "marketSegments.title": "Market Segments",
