#34287 Reworked Settings / Documents popup to sidebar.

--- a/localization/en.json
+++ b/localization/en.json
@@ -1927,6 +1927,14 @@
   "settings.tables.documents.dropdown": "Choose document type",
   "settings.tables.documents.dropdown.all.document.types": "All document types",
   "settings.previous": "< Previous",
+  "settings.documents.addDocument": "Add Document",
+  "settings.documents.editDocument": "Edit Document",
+  "settings.documents.selectDocumentType": "Select document type",
+  "settings.documents.enterDocumentName": "Enter document name",
+  "settings.documents.fileDescription": "File description",
+  "settings.documents.selectPermission": "Select permission",
+  "settings.documents.selectSharingOption": "Select sharing option",
+  "settings.documents.enterIssuerName": "Enter issuer name",
   "shippingQuote.header": "Shipping Quote",
   "shippingQuote.shippingQuantity": "Shipping Quantity",
   "shippingQuote.purchase": "Purchase",
