changed tab title settings

--- a/localization/en.json
+++ b/localization/en.json
@@ -147,6 +147,7 @@
   "navigation.purchaseOrders": "Purchase Orders",
   "navigation.purchaseOrdersDetail": "Purchase Orders Detail",
   "navigation.settings": "Settings",
+  "navigation.myAccount": "My Account",
   "navigation.userSettings": "User Settings",
   "navigation.admin": "Admin",
   "navigation.operations": "Operations",
