fixed redirect from tutorial to branches or pick up address

--- a/localization/en.json
+++ b/localization/en.json
@@ -2261,15 +2261,15 @@
   "hold.approve": "Approve",
   "hold.holdRequest": "Hold Requests",
   "hold.buy": "Buy",
-  "tutorial.branches.title": "Add Branches",
-  "tutorial.branches.content": "This will help you to know which users are at what locations",
-  "tutorial.branches.button": "Get Started!",
+  "tutorial.locations.title": "Add Branches",
+  "tutorial.locations.content": "This will help you to know which users are at what locations",
+  "tutorial.locations.button": "Get Started!",
   "tutorial.users.title": "Add Users",
   "tutorial.users.content": "Invite other team members to buy and sell with you!",
   "tutorial.users.button": "Add User",
-  "tutorial.warehouses.title": "Add Pick-Up Locations",
-  "tutorial.warehouses.content": "Add a Pick-Up Location and be one step closer to posting on the Marketplace.",
-  "tutorial.warehouses.button": "Add Pick-Up Location",
+  "tutorial.pickup.title": "Add Pick-Up Locations",
+  "tutorial.pickup.content": "Add a Pick-Up Location and be one step closer to posting on the Marketplace.",
+  "tutorial.pickup.button": "Add Pick-Up Location",
   "tutorial.products.title": "Add Products",
   "tutorial.products.content": "You can import with this .csv template or add them individually.",
   "tutorial.products.button": "Add Products",
