added and adjust graphs, numbers, animation to analytics dashboard

--- a/localization/en.json
+++ b/localization/en.json
@@ -2430,10 +2430,21 @@
   "validation.minOneGroup": "At least one group should be selected",
   "validation.minOneCompany": "At least one company should be selected",
   "dashboard.title": "Analytics Dashboard",
-  "dasboard.transactions.graph.title": "Total Marketplace Transactions in {year}",
-  "dasboard.transactions.graph.subtitle": "in thousand dollars",
-  "dasboard.popularProducts.title": "POPULAR PRODUCTS",
+  "dashboard.totalCompanies.title": "Total Companies",
+  "dashboard.totalProducts.title": "Total Products",
+  "dashboard.totalValue.title": "Total Products Value $M",
+  "dashboard.totalBroadcastedValue.title": "Total Broadcasted Value $M",
+  "dashboard.totalUsersCount.title": "Total Users Count",
+  "dasboard.sales.graph.title": "Total Sum Of Sales Monthly",
+  "dasboard.companyPurchase.graph.title": "Company Sum Of Purchases Monthly",
+  "dasboard.companySales.graph.title": "Company Sum Of Sales Monthly",
+  "dasboard.sales.graph.subtitle": "in thousand dollars",
   "dasboard.companiesUser.title": "COMPANIES BY USERS",
   "dasboard.companiesProducts.title": "COMPANIES BY PRODUCTS",
-  "dasboard.companiesTransactions.title": "COMPANIES BY TRANSACTIONS"
+  "dasboard.companiesTransactions.title": "COMPANIES BY SALES",
+  "dasboard.productsQuantity.title": "PRODUCTS BY QUANTITY",
+  "dasboard.productsValue.title": "PRODUCTS BY VALUE",
+  "dasboard.productsPopular.title": "PRODUCTS BY POPULAR",
+  "dasboard.companyPurchase": "COMPANY PURCHASES",
+  "dasboard.companySales": "COMPANY SALES"
 }
