#34204 Updated button text in Document Manager.

--- a/localization/en.json
+++ b/localization/en.json
@@ -1327,7 +1327,8 @@
   "administration.merchants": "Merchants: {merchants}",
   "administration.companyAdministration": "Company Administration - {company}",
   "administration.companyDetail": "Company Detail",
-  "attachments.attachSelected": "Attach Selected Files",
+  "attachments.attachSelectedFile": "Attach Selected File",
+  "attachments.attachSelectedFiles": "Attach Selected Files",
   "attachments.popup.header": "Document Already Exists",
   "attachments.popup.tableHeader1": "Document name",
   "attachments.popup.tableHeader2": "Select action",
