new design for wanted board

--- a/localization/en.json
+++ b/localization/en.json
@@ -2320,6 +2320,7 @@
   "wantedBoard.accepted": "Accepted",
   "wantedBoard.enterCasNumber": "Enter CAS Number",
   "wantedBoard.selectAssay": "Select Assay",
+  "wantedBoard.funcionalEquivalent": "Funcional Equivalent",
   "wantedBoard.assayMin": "Assay Min",
   "wantedBoard.assayMax": "Assay Max",
   "wantedBoard.packaging": "Packaging",
@@ -2353,6 +2354,7 @@
   "wantedBoard.purchase": "Purchase",
   "wantedBoard.delete": "Delete",
   "wantedBoard.datePost": "Date Post",
+  "wantedBoard.requestProduct": "Request Product",
   "confirm.rejectRequestedItem.Header": "Reject Requested Item",
   "confirm.rejectRequestedItem.Content": "Do you really want to reject requested item?",
   "confirm.deleteRequestedItem.Header": "Delete Requested Item",
