--- a/localization/en.json
+++ b/localization/en.json
@@ -2432,7 +2432,9 @@
   "validation.minOneCompany": "At least one company should be selected",
   "dashboard.title": "Analytics Dashboard",
   "dashboard.totalCompanies.title": "Total Companies",
+  "dashboard.totalClientCompanies.title": "Total Client Companies",
   "dashboard.totalProducts.title": "Total Products",
+  "dashboard.totalClientProducts.title": "Total Client Products",
   "dashboard.totalValue.title": "Total Products Value $M",
   "dashboard.totalBroadcastedValue.title": "Total Broadcasted Value $M",
   "dashboard.totalUsersCount.title": "Total Users Count",
