adjust submit offer in wanted board

--- a/localization/en.json
+++ b/localization/en.json
@@ -2398,11 +2398,14 @@
   "wantedBoard.purchased": "Purchased",
   "wantedBoard.rejected": "Rejected",
   "wantedBoard.submitOfferHeader": "SUBMIT OFFER",
+  "submitOffer.quantity": "Quantity",
   "wantedBoard.requestedBy": "Requested By",
   "wantedBoard.notify.noInventoryItems.Header": "No Items Match",
   "addDocuments.existingDocuments": "Existing Documents",
   "addDocuments.addDocuments": "ADD DOCUMENTS",
   "wantedBoard.notify.noInventoryItems.Content": "You do not have any Inventory item matching the requested item to offer.",
+  "wantedBoard.optionOffer.placeholder": "Select option",
+  "wantedBoard.optionOffer.label": "Option to offer",
   "global.enabled": "Enabled",
   "global.selectTags": "Select tags",
   "global.marketSegments": "Market Segments",
