new expand detail row in datagrid, adjust submit offer,

--- a/localization/en.json
+++ b/localization/en.json
@@ -2460,5 +2460,6 @@
   "dasboard.topBuyers": "TOP 10 BUYERS",
   "dasboard.total": "Total",
   "dasboard.average": " average",
-  "requestProduct.requiredDocuments": " Required Documents"
+  "requestProduct.requiredDocuments": " Required Documents",
+  "submitOffer.expirationDate": "Expiration Date"
 }
