--- a/localization/en.json
+++ b/localization/en.json
@@ -2408,6 +2408,7 @@
   "wantedBoard.optionOffer.label": "Option to offer",
   "wantedBoard.linkProductNotExist": "Request an EchoProduct",
   "wantedBoard.productNotExist": "The product does not exist, ",
+  "wantedBoard.requestAnEchoProduct": "REQUEST AN ECHO PRODUCT",
   "global.enabled": "Enabled",
   "global.selectTags": "Select tags",
   "global.marketSegments": "Market Segments",
