--- a/localization/en.json
+++ b/localization/en.json
@@ -821,6 +821,8 @@
   "global.errorValidation.content": "Fields on form are incomplete/non-validating, please fix the issues first",
   "global.copyright": "Copyright {currentYear} Echosystem",
   "global.addDocument": "Add Document",
+  "global.notes": "Notes",
+  "global.processed": "Processed",
   "import.assayMin": "Assay Min",
   "import.assayMax": "Assay Max",
   "import.broadcasted": "Broadcasted",
@@ -970,6 +972,10 @@
   "confirm.order.actions.rejected.content": "Do you really want to reject order {orderId}?",
   "confirm.order.actions.cancelled.title": "Cancel Order",
   "confirm.order.actions.cancelled.content": "Do you really want to cancel order {orderId}?",
+  "confirm.operations.denyRequest.title": "Deny Create Request?",
+  "confirm.operations.denyRequest.content": "Do you really want to deny {name} create request?",
+  "confirm.operations.deleteRequest.title": "Delete Create Request?",
+  "confirm.operations.deleteRequest.content": "Do you really want to delete {name} create request?",
   "login.username": "Username",
   "login.password": "Password",
   "login.login": "LOG IN",
@@ -1817,6 +1823,7 @@
   "operations.tables.companyProductCatalog.MappedText": "Select mapped/unmapped only",
   "operations.tables.companyInventory.search": "Search product inventory by name, number ...",
   "operations.tables.orders.search": "Search orders by company",
+  "operations.tables.companyGenericProduct.search": "Search Company Generic Product by name",
   "operations.addShippingQuote": "Add Shipping Quote",
   "operations.editShippingQuote": "Edit Shipping Quote",
   "operations.carrierName": "Carrier Name",
@@ -1841,6 +1848,11 @@
   "operations.productCode": "Product Code",
   "operations.complete": "Complete",
   "operations.broadcasted": "Broadcasted",
+  "operations.processedAt": "Processed At",
+  "operations.requestedAt": "Requested At",
+  "operations.markRequestAsProcessed": "Mark Request as Processed",
+  "operations.denyRequest": "Deny Request",
+  "operations.deleteRequest": "Delete Request",
   "confirm.delete.operations.tag.title": "Delete",
   "confirm.delete.operations.tag.content": "Do you really want to delete tag?",
   "orders.detail": "Detail",
