#34476 Fixed datagrid row actions, added columns.

--- a/localization/en.json
+++ b/localization/en.json
@@ -973,9 +973,9 @@
   "confirm.order.actions.cancelled.title": "Cancel Order",
   "confirm.order.actions.cancelled.content": "Do you really want to cancel order {orderId}?",
   "confirm.operations.denyRequest.title": "Deny Create Request?",
-  "confirm.operations.denyRequest.content": "Do you really want to deny {name} create request?",
+  "confirm.operations.denyRequest.content": "Do you really want to deny '{name}' create request?",
   "confirm.operations.deleteRequest.title": "Delete Create Request?",
-  "confirm.operations.deleteRequest.content": "Do you really want to delete {name} create request?",
+  "confirm.operations.deleteRequest.content": "Do you really want to delete '{name}' create request?",
   "login.username": "Username",
   "login.password": "Password",
   "login.login": "LOG IN",
@@ -1853,6 +1853,8 @@
   "operations.markRequestAsProcessed": "Mark Request as Processed",
   "operations.denyRequest": "Deny Request",
   "operations.deleteRequest": "Delete Request",
+  "operations.requestedByName": "Requested by Name",
+  "operations.requestedByCompany": "Requested by Company",
   "confirm.delete.operations.tag.title": "Delete",
   "confirm.delete.operations.tag.content": "Do you really want to delete tag?",
   "orders.detail": "Detail",
