#34476 Admin View for Manipulating CompanyGenericProduct - Updated/Added columns, added Attached Documents popup (display/download).

--- a/localization/en.json
+++ b/localization/en.json
@@ -1853,8 +1853,8 @@
   "operations.markRequestAsProcessed": "Mark Request as Processed",
   "operations.denyRequest": "Deny Request",
   "operations.deleteRequest": "Delete Request",
-  "operations.requestedByName": "Requested by Name",
-  "operations.requestedByCompany": "Requested by Company",
+  "operations.requestedBy": "Requested by",
+  "operations.attachedDocuments": "Attached Documents",
   "confirm.delete.operations.tag.title": "Delete",
   "confirm.delete.operations.tag.content": "Do you really want to delete tag?",
   "orders.detail": "Detail",
