--- a/localization/en.json
+++ b/localization/en.json
@@ -480,6 +480,8 @@
   "global.new": "New",
   "global.editCompanyProduct": "Edit Company Product",
   "global.addCompanyProduct": "Add Company Product",
+  "global.uploadANewProduct": "Upload a new Product",
+  "global.uploadASDSInfoSheet": "Upload a SDS/Info Sheet",
   "global.editAltNames": "Edit Alternative Names",
   "global.chooseOption": "Choose an option",
   "global.add": "Add",
@@ -638,6 +640,8 @@
   "global.moreAttributes": "More Attributes",
   "global.mostImportantSymptomsAndEffects": "Most Important Symptoms and Effects",
   "global.mutagenicEffects": "Mutagenic Effects",
+  "global.notes": "Notes",
+  "global.enterNotes": "Enter notes",
   "global.notesToPhysician": "Notes to Physician",
   "global.odor": "Odor",
   "global.odorThreshold": "Odor Threshold",
