#34475 Updated CompanyGenericProduct Create Request component, added to Wanted Board / Request Product sidebars.

--- a/localization/en.json
+++ b/localization/en.json
@@ -2479,6 +2479,7 @@
   "wantedBoard.submitOfferHeader": "SUBMIT OFFER",
   "wantedBoard.requestedBy": "Requested By",
   "wantedBoard.notify.noInventoryItems.Header": "No Items Match",
+  "wantedBoard.requestACompanyGenericProduct": "Request a Company Generic Product",
   "addDocuments.existingDocuments": "Existing Documents",
   "addDocuments.addDocuments": "ADD DOCUMENTS",
   "wantedBoard.notify.noInventoryItems.Content": "You do not have any Inventory item matching the requested item to offer.",
