adjust value $ in dashboard

--- a/localization/en.json
+++ b/localization/en.json
@@ -2518,7 +2518,9 @@
   "dashboard.totalProducts.title": "Total Products",
   "dashboard.totalClientProducts.title": "Total Client Products",
   "dashboard.totalValue.title": "Total Products Value $M",
+  "dashboard.totalValueWithoutMilion.title": "Total Products Value $",
   "dashboard.totalBroadcastedValue.title": "Total Broadcasted Value $M",
+  "dashboard.totalBroadcastedValueWithoutMilion.title": "Total Broadcasted Value $",
   "dashboard.totalUsersCount.title": "Total Users Count",
   "dasboard.sales.graph.title": "Total Sum Of Sales Monthly",
   "dasboard.companyPurchase.graph.title": "Company Sum Of Purchases Monthly",
