--- a/localization/en.json
+++ b/localization/en.json
@@ -74,8 +74,10 @@
   "admin.form": "Form",
   "admin.condition": "Condition",
   "admin.documentType": "Document Type",
+  "admin.addDocumentType": "Add Document Type",
   "admin.associations": "Associations",
   "admin.MarketSegment": "Document Segment",
+  "admin.addMarketSegment": "Add Market Segment",
   "admin.searchCasProduct": "Search CAS product by name or number ...",
   "admin.searchCompany": "Search company by name",
   "admin.searchUnitOfMeasure": "Search unit of measure by name or measure type",
