added expandable advanced options and min/max pallet change based on selected type

--- a/localization/en.json
+++ b/localization/en.json
@@ -2512,6 +2512,7 @@
   "product.groups.tagsName": "Tags Name",
   "product.groups.tags": "Tags",
   "product.groups.marketSegment": "Market Segment",
+  "product.advanced.options": "Advanced Options",
   "confirm.delete.product.groups.content": "Do you really want to delete Product Group?",
   "validation.minOneGroup": "At least one group should be selected",
   "validation.minOneCompany": "At least one company should be selected",
