--- a/localization/en.json
+++ b/localization/en.json
@@ -164,6 +164,9 @@
   "navigation.documentTypes": "Document Types",
   "navigation.marketSegments": "Market Segments",
   "navigation.locations": "Locations",
+  "navigation.manageGuests": "Manage Guests",
+  "navigation.guests": "Guests",
+  "navigation.chat": "Chat",
   "dwolla.controllerTitlePopup": "Please read below for the definition of Controller in this context.",
   "dwolla.paymentPoweredBy": "Echo Global Chemical Exchange payment gateway is powered by:",
   "dwolla.confirmAcc": "Confirm Account Administrator Information",
@@ -364,6 +367,7 @@
   "global.logisticAccounts": "Logistics Accounts",
   "global.reviewRequested": "Review Requested",
   "global.companyName": "Company Name",
+  "global.enterCompanyName": "Enter Company Name",
   "global.p44CompanyId": "P44 Company ID",
   "global.complete": "Complete",
   "global.headquaterAddress": "Headquarters Address",
@@ -377,6 +381,7 @@
   "global.docName": "Document Name",
   "global.docType": "Document Type",
   "global.doc": "Document",
+  "global.links": "Links",
   "global.linkCount": "Links count",
   "global.mixtures": "Mixtures",
   "global.casNumber": "CAS Number",
@@ -468,6 +473,7 @@
   "global.state": "State",
   "global.status": "Status",
   "global.unmapped": "unmapped",
+  "global.unmapped.cptlz": "Unmapped",
   "global.notPublished": "This echo product is not published and will not show on the Marketplace.",
   "global.country": "Country",
   "global.province": "Province",
@@ -479,6 +485,7 @@
   "global.firstName": "First Name",
   "global.lastName": "Last Name",
   "global.save": "Save",
+  "global.saveChanges": "Save Changes",
   "global.edit": "Edit",
   "global.new": "New",
   "global.editCompanyProduct": "Edit Company Product",
@@ -505,8 +512,15 @@
   "global.loading": "Loading",
   "global.or": "or",
   "global.ok": "Ok",
-  "global.companyAdmin": "Company Admin (Primary User)",
+  "global.companyAdminPrimaryUser": "Company Admin (Primary User)",
+  "global.companyAdmin": "Company Admin",
+  "global.enterCompanyAdmin": "Enter Company Admin",
+  "global.adminEmail": "Admin Email",
+  "global.enterAdminEmail": "Enter Admin Email",
+  "global.primaryBranchAddress": "Primary Branch Address",
+  "global.enterPrimaryBranchAddress": "Enter Primary Branch Address",
   "global.primaryBranch": "Primary Branch (Billing Address)",
+  "global.primaryBranch2": "Primary Branch",
   "global.mailingBranch": "Mailing Branch (optional)",
   "global.streetAddress": "Street Address",
   "global.zip": "Zip",
@@ -765,7 +779,9 @@
   "global.deliveryNotes": "Delivery Notes",
   "global.taxId": "Tax ID",
   "global.contactName": "Contact Name",
+  "global.enterContactName": "Enter Contact Name",
   "global.contactEmail": "Contact Email",
+  "global.enterContactEmail": "Enter Contact Email",
   "global.broadcast": "Broadcast",
   "global.sales": "Sales",
   "global.Purchase": "Purchase",
@@ -927,6 +943,8 @@
   "confirm.deleteCompany.content": "Do you really want to delete '{name}' company?",
   "confirm.deleteCondition.title": "Delete Condition",
   "confirm.deleteCondition.content": "Do you really want to delete '{name}' condition?",
+  "confirm.deleteDocument.title": "Delete Document",
+  "confirm.deleteDocument.content": "Do you really want to delete '{name}' document?",
   "confirm.deleteDocumentType.title": "Delete Document Type",
   "confirm.deleteDocumentType.content": "Do you really want to delete '{name}' document type?",
   "confirm.deleteMarketSegments.title": "Delete Market Segment",
@@ -996,6 +1014,25 @@
   "registration.middleName": "Your Middle Name",
   "registration.lastName": "Your Last Name",
   "response.success.saved": "Succesfully Saved!",
+  "manageGuests.manageGuestCompanies": "Manage Guest Companies",
+  "manageGuests.manageCompany": "Manage Company",
+  "manageGuests.backToGuests": "Back To Guests",
+  "manageGuests.companyEdit.tab.guestCompanyInfo": "Guest Company Info",
+  "manageGuests.companyEdit.tab.users": "Users",
+  "manageGuests.companyEdit.tab.documentManager": "Document Manager",
+  "manageGuests.companyEdit.tab.quote": "Quote",
+  "manageGuests.searchGuest": "Search guest...",
+  "manageGuests.addCompany": "Add Company",
+  "manageGuests.searchClient": "Search Client...",
+  "manageGuests.addClient": "Add Client",
+  "manageGuests.searchDocuments": "Search Documents...",
+  "manageGuests.chooseDocumentType": "Choose Document Type",
+  "manageGuests.allDocumentTypes": "All Document Types",
+  "manageGuests.downloadAll": "Download All",
+  "manageGuests.addDocument": "Add Document",
+  "manageGuests.searchQuote": "Search...",
+  "manageGuests.myDocuments": "My Documents",
+  "manageGuests.sharedWithMe": "Shared With Me",
   "nav.Logout": "Logout",
   "nav.Dashboard": "Dashboard",
   "nav.Orders": "Orders",
