--- a/localization/en.json
+++ b/localization/en.json
@@ -1474,8 +1474,8 @@
   "cart.shoppingCart": "Shopping Cart",
   "cart.backToProductOfferings": "Back to Product Offerings",
   "cart.backToShoppingCart": "Back to Shopping Cart",
-  "cart.1shipping": "1. Shipping",
-  "cart.shippingAddress": "Shipping Address",
+  "cart.1delivery": "1. Delivery",
+  "cart.deliveryAddress": "Delivery Address",
   "cart.billingInfo": "Billing Info",
   "cart.nothing": "Please, first select a shipping destination Warehouse or Delivery Address.",
   "cart.noShippingQuotes": "We are sorry, but no matching Shipping Quotes were provided by logistics company.",
@@ -1522,8 +1522,7 @@
   "cart.minimumOrderQQ": "Min. Purchase",
   "cart.minimumPackges": "Minimum Packages",
   "cart.split": "Split",
-  "cart.shippingtInfo": "Shipping Information",
-  "cart.shipingInformation": "Shipping Information",
+  "cart.deliveryInfo": "Delivery Information",
   "cart.unCode": "UN Code",
   "cart.packagingGroup": "Packaging Group",
   "cart.hazardClass": "Hazard Class",
@@ -2093,6 +2092,7 @@
   "order.productName": "Product Name",
   "order": "Order",
   "order.shipping": "Shipping",
+  "order.deliveryInfo": "Delivery Info",
   "order.tax": "Tax",
   "order.fobPrice": "FOB Price",
   "order.review": "Review",
@@ -2122,7 +2122,7 @@
   "order.orders": "ORDERS",
   "order.downloadOrder": "Download {orderType}O",
   "order.orderStatus": "Order Status",
-  "order.shippingStatus": "Shipping Status",
+  "order.deliveryStatus": "Delivery Status",
   "order.reviewStatus": "Review Status",
   "order.creditStatus": "Credit Status",
   "order.returnStatus": "Return Status",
@@ -2171,7 +2171,7 @@
   "order.pickupAddress": "Pick-Up Address",
   "order.pickupFromAddress": "Pick-Up From Address",
   "order.pickupFrom": "Pick-Up From",
-  "order.shippingContact": "Shipping Contact",
+  "order.deliveryContact": "Delivery Contact",
   "order.contactNumber": "Contact Number",
   "order.contactEmail": "Contact E-Mail",
   "order.shipTo": "Ship To",
