added paymentTerms, freightCost

--- a/localization/en.json
+++ b/localization/en.json
@@ -846,6 +846,7 @@
   "global.addDocument": "Add Document",
   "global.notes": "Notes",
   "global.processed": "Processed",
+  "global.paymentTerms": "Payment Terms",
   "import.assayMin": "Assay Min",
   "import.assayMax": "Assay Max",
   "import.broadcasted": "Broadcasted",
@@ -1573,6 +1574,7 @@
   "cart.requestedQuantity": "Requested Quantity:",
   "cart.selectFirst": "Select Packages Requested first.",
   "cart.holdRequestInfo": "2. Hold Request Info",
+  "cart.freightCost": "Freight Cost",
   "validation.required": "Required",
   "validation.dateInFuture": "Date must be in future",
   "validation.dateNotInPast": "Date must not be in past",
