adjust own freight, adjust design shipping, capitalize titles

--- a/localization/en.json
+++ b/localization/en.json
@@ -1512,7 +1512,7 @@
   "cart.shoppingCart": "Shopping Cart",
   "cart.backToProductOfferings": "Back to Product Offerings",
   "cart.backToShoppingCart": "Back to Shopping Cart",
-  "cart.1shipping": "1. Shipping",
+  "cart.1shipping": "1. SHIPPING",
   "cart.shippingAddress": "Shipping Address",
   "cart.billingInfo": "Billing Info",
   "cart.nothing": "Please, first select a shipping destination Warehouse or Delivery Address.",
@@ -1524,8 +1524,8 @@
   "cart.etd": "ETD",
   "cart.yourOrder": "YOUR ORDER",
   "cart.serviceType": "Service Type",
-  "cart.2freightSelection": "2. Freight Selection",
-  "cart.3payment": "3. Payment",
+  "cart.2freightSelection": "2. FREIGHT SELECTION",
+  "cart.3payment": "3. PAYMENT",
   "cart.selectCreditCard": "Select Credit Card",
   "cart.selectBankAccount": "Select Bank Account",
   "cart.paymentMethod": "Payment Method",
@@ -1575,6 +1575,7 @@
   "cart.selectFirst": "Select Packages Requested first.",
   "cart.holdRequestInfo": "2. Hold Request Info",
   "cart.freightCost": "Freight Cost",
+  "cart.or": "OR",
   "validation.required": "Required",
   "validation.dateInFuture": "Date must be in future",
   "validation.dateNotInPast": "Date must not be in past",
