edit shipping address moved to sidebar

--- a/localization/en.json
+++ b/localization/en.json
@@ -1461,8 +1461,8 @@
   "operators": "Operators",
   "operators.login": "Login",
   "checkout.contactInfo": "Contact Info",
-  "checkout.addNewAddress": "Add New Address",
-  "checkout.editAddress": "Edit Address",
+  "checkout.addNewAddress": "ADD NEW ADDRESS",
+  "checkout.editAddress": "EDIT ADDRESS",
   "checkout.addNewWarehouse": "Add New Warehouse",
   "checkout.editWarehouse": "Edit Warehouse",
   "cart.useOwnFreight": "Use my own freight",
