#34635 Updated Marketplace filter to filter based on Product Groups.

--- a/localization/en.json
+++ b/localization/en.json
@@ -1096,6 +1096,7 @@
   "filter.warehouse": "Warehouse",
   "filter.incomplete": "Incomplete",
   "filter.chemicalProductName": "Chemical / Product Name",
+  "filter.productGroupName": "Product Group Name",
   "filter.saved": "Saved",
   "filter.searchLocation": "Search Location",
   "filter.searchWarehouse": "Search Warehouse",
@@ -2360,6 +2361,7 @@
   "filter.searchOrigin": "Search Origin",
   "filter.selectOption": "Select Option",
   "filter.searchProductsInventory": "Chemical, CAS, Trade",
+  "filter.searchProductGroup": "Search Product Group",
   "title.settings": "Settings - {tab}",
   "title.settings.bank-accounts": "Bank Accounts",
   "title.settings.branches": "Branches",
